add update user feature
