# src/router/user.routes.ts
@@ -1,9 +1,14 @@
 import express from "express";
-import { getAllUsers, DeleteUser } from "../controller/user.controller";
+import {
+  getAllUsers,
+  DeleteUser,
+  UpdateUser,
+} from "../controller/user.controller";
 import { isAuthenticated, isOwner } from "../middleware";
 
 const router = express.Router();
 router.get("/", isAuthenticated, getAllUsers);
-router.delete("/:user_id",isAuthenticated,isOwner, DeleteUser);
+router.delete("/:user_id", isAuthenticated, isOwner, DeleteUser);
+router.patch("/:user_id", isAuthenticated,isOwner, UpdateUser);
 
 export default router;
